<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/background"
	android:id="@+id/ChoixDateLayout"
	>
	
	<TextView
		android:id="@+id/accesmesures_titre"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/accesmesures_titre"
		android:textSize="27px"
		android:layout_marginTop="20px"
		android:layout_centerHorizontal="true"
		android:textColor="#0000FF"
	/>
	
		<Button
 		android:id="@+id/accesmesures_photo"
		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
 		android:text="@string/accesmesures_photo"
 		android:layout_marginTop="100px"
		android:layout_centerHorizontal="true"
		android:background="@drawable/mybutton2"
 	/>
	
	<Button
 		android:id="@+id/accesmesures_synthese"
		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
 		android:text="@string/accesmesures_synthese"
 		android:layout_marginTop="170px"
		android:layout_centerHorizontal="true"
		android:background="@drawable/mybutton2"
 	/>
	
	<Button
 		android:id="@+id/accesmesures_retour"
		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
 		android:text="@string/accesmesures_retour"
 		android:layout_marginTop="350px"
		android:layout_centerHorizontal="true"
		android:background="@drawable/mybutton2"
 	/>


</RelativeLayout>