<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/background"
	android:id="@+id/ChoixDateLayout"
	android:orientation="vertical"
	>
  
	<TextView
		android:id="@+id/param_titre"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/param_titre"
		android:textSize="27px"
		android:layout_marginTop="20px"
		android:layout_centerHorizontal="true"
		android:textColor="#0000FF"
	/>
  
	<Spinner
		android:id="@+id/param_typedate"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/param_titre"
		android:layout_marginLeft="30px"
		android:layout_marginRight="30px"
		android:layout_marginTop="20px"
 	/>
  
	<Spinner 
		android:id="@+id/param_mois"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/param_typedate"
		android:layout_alignParentRight="true"
		android:layout_marginLeft="150px"
		android:layout_marginRight="30px"
		android:visibility="invisible"
		android:layout_marginTop="20px"
	/>
	    
	<Spinner 
		android:id="@+id/param_jour"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/param_typedate"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="30px"
		android:layout_marginRight="200px"
		android:visibility="invisible"
		android:layout_marginTop="20px"
	/>
	
	<TextView android:id="@+id/progress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="22px"
		android:textColor="@color/texte"
		android:layout_below="@id/param_jour"
		android:layout_marginTop="20px"
		android:layout_centerHorizontal="true"
		android:visibility="invisible"
		android:text="Heure à choisir"
	/>

	<SeekBar android:id="@+id/seek"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:layout_marginLeft="60px"
        android:layout_marginRight="60px"
        android:layout_below="@id/progress"
    />

	<TextView
 		android:id="@+id/param_couchertext"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/param_couchertext"
 		android:visibility="invisible"
 		android:textSize="15px"
 		android:textColor="@color/texte"
 		android:gravity="right"
		android:layout_toRightOf="@id/progress"
		android:layout_alignBaseline="@id/progress"
 		android:layout_margin="5px"
	/>
	
	<TextView
 		android:id="@+id/param_levertext"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
 		android:text="@string/param_levertext"
 		android:visibility="invisible"
 		android:textSize="15px"
 		android:textColor="@color/texte"
 		android:gravity="left"
		android:layout_toLeftOf="@id/progress"
		android:layout_alignBaseline="@id/progress"
 		android:layout_margin="13px"
	/>

	<TextView
 		android:id="@+id/param_lever"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:visibility="invisible"
 		android:textSize="17px"
 		android:textColor="@color/texte"
 		android:layout_below="@id/progress"
 		android:layout_marginLeft="10px"
 		android:layout_marginTop="2px"
 	/>

	<TextView
		android:id="@+id/param_coucher"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
 		android:visibility="invisible"
 		android:textSize="17px"
 		android:textColor="@color/texte"
 		android:gravity="right"
 		android:layout_below="@id/progress"
 		android:layout_marginRight="10px"
 		android:layout_marginTop="2px"
	/>

	<LinearLayout
		android:id="@+id/precision"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal|center_vertical"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="20px"
		android:layout_below="@id/seek"
	>
		<TextView
			
			android:id="@+id/param_precisiontext"
			android:text="@string/param_precisiontext"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:textSize="18px"
			android:textColor="@color/texte"
			android:gravity="center"
		/>
		
		<Button
			android:id="@+id/param_precision_moins"
		 	android:layout_width="wrap_content"
		 	android:layout_height="wrap_content"
		 	android:text=" – "
			android:textSize="18px"
	 		android:layout_toRightOf="@id/param_precisiontext"
			android:layout_alignBaseline="@id/param_precisiontext"
			android:layout_marginLeft="25px"
	 	/>
	 	
	 	<Button
			android:id="@+id/param_precision_valeur"
			android:text=" 2 "
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="18px"
			android:textColor="#FFFFFF"
			android:layout_toRightOf="@id/param_precision_moins"
			android:background="@drawable/mybutton"
		/>

	 	<Button
			android:id="@+id/param_precision_plus"
		 	android:layout_width="wrap_content"
		 	android:layout_height="wrap_content"
			android:textSize="18px"
		 	android:text=" + "
	 		android:layout_toRightOf="@id/param_precision_valeur"
			android:layout_alignBaseline="@id/param_precisiontext"
	 	/>	
	</LinearLayout>

	
	<RelativeLayout
		android:id="@+id/param_boutonsbas"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@id/param_precision_valeur"
		android:gravity="bottom|center"
		android:layout_margin="10px"
	>
		<Button
			android:id="@+id/param_TrouverSoleil"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	 		android:text="@string/param_TrouverSoleil"
			android:visibility="invisible"	
			android:background="@drawable/mybutton2"
			android:layout_margin="10px"
	 	/>
	 
		<Button
	 		android:id="@+id/param_retour"
			android:layout_width="wrap_content"
	 		android:layout_height="wrap_content"
	 		android:text="@string/param_retour"
			android:background="@drawable/mybutton2"
			android:layout_toRightOf="@id/param_TrouverSoleil"
			android:layout_margin="10px"
	 	/>
	 	
	 </RelativeLayout> 
		
</RelativeLayout>
